--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@typescript-eslint/eslint-plugin-tslint": "^4.29.3",
     "aws-sdk": "^2.978.0",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
